# drf-first

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  settings_late.py
web/: .dockerignore  Dockerfile  Makefile  pyproject.toml
web/app/: celery.py  settings.py  urls.py  views.py
web/app/feedback/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
web/app/feedback/migrations/: 0001_initial.py
web/app/users/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
web/app/users/fixtures/: user_data.json
web/app/users/migrations/: 0001_initial.py  0002_initial.py  0003_alter_user_admin.py  0004_alter_guest_options_alter_guestentry_options.py  0005_alter_user_admin.py  0006_alter_guestentry_enter_time_and_more.py  0007_alter_guestentry_options_remove_guest_invite_by_and_more.py  0008_alter_guest_auto_number_alter_guest_created_at_and_more.py  0009_alter_guestentry_enter_time_and_more.py  0010_alter_user_managers_remove_user_username.py  0011_user_full_name.py
web/app/yard_control/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
web/app/yard_control/fixtures/: yard_data.json  yasrd_control_data.json
web/app/yard_control/migrations/: 0001_initial.py  0002_alter_automobile_options_alter_blacklist_options_and_more.py  0003_entryhistory_outhistory.py  0004_alter_automobile_expires_at.py  0005_alter_automobile_is_confirmed.py  0006_yard_automobiles.py  0008_alter_automobile_expires_at_alter_blacklist_yard.py  (+8 more)
web/authentication/: serializers.py  urls.py  views.py
(+9 files in other folders)
